src/main/kubernetes/mesh-operators.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-distributed-tracing
spec: {}
