src/main/kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/version: "1.0"
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello
      app.kubernetes.io/version: "1.0"
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app.kubernetes.io/name: hello
        app.kubernetes.io/version: "1.0"
      namespace: grpc-testing
    spec:
      containers:
        - image: quay.io/bhouse/grpc-quarkus-transcoder:1.0.2
          imagePullPolicy: Always
          name: hello
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
          #volumeMounts:
          #  - name: tls
          #    mountPath: /work/tls
      #volumes:
      #  - name: tls
      #    secret:
      #      secretName: tls-secret
      #      defaultMode: 420
