src/main/kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/version: "1.0"
  name: hello
spec:
  ports:
    - name: grpc
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: hello
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
