src/main/kubernetes/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 9000
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
