src/main/kubernetes/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
spec:
  hosts:
  - "grpc-grpc-testing.apps.cluster-bntzg.bntzg.sandbox1686.opentlc.com"
  gateways:
  - test-gateway
  http:
  - name: primary
    route:
    - destination:
        host: hello
        port:
          number: 9000
